<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/grey_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/layout_softWare"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            card_view:cardBackgroundColor="@android:color/white"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16sp"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/softWare"
                    />
                <TextView
                    android:id="@+id/tvSoftWare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/layout_sn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            card_view:cardBackgroundColor="@android:color/white"
            android:focusable="true"
            android:clickable="true"
android:layout_marginTop="5dp"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16sp"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/sn"
                    />
                <TextView
                    android:id="@+id/tvSn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/layout_website"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            card_view:cardBackgroundColor="@android:color/white"
            android:focusable="true"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16sp"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/offical_website"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/more"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
